--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,3 +3,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+iframe {
+  width: 100%;
+  min-height: 20vmin;
+}
+
+@layer base {
+}
